# Porfolio_Apps

./: .env.example  .gitignore  CNAME  DEPLOY.md  Dockerfile.railway  README.md  SESSION_NOTES.md  pyproject.toml  railway.toml
Docs/: CENSUS_2021_ANALYSIS_SPEC.md  PORTFOLIO_APP_SPEC.md  PRODUCTION_ARCHITECTURE.md  PROJECT_DOCUMENTATION_CV.md  UK_Money_Pain_Point_Radar_SPEC.md
apps/money-radar/: Dockerfile  Dockerfile.railway  docker-compose.yml  pyproject.toml  railway.toml
apps/money-radar/api/: db.py  main.py  settings.py  trends.py
apps/money-radar/api/api/: bronze.py  cli.py  clustering.py  dashboard.py  evaluation.py  ingest_listings.py  ingest_threads.py  logging.py  main.py  reddit_client.py  schema.py  score_signals.py  settings.py  signal_scoring.py  trends.py
apps/money-radar/api/ukmppr/: bronze.py  cli.py  clustering.py  ingest_listings.py  ingest_threads.py  llm_extraction.py  llm_signal_scoring.py  reddit_client.py  schema.py  score_signals.py  settings.py  signal_scoring.py  trends.py
apps/money-radar/api/ukmppr/api/: __init__.py  main.py
apps/money-radar/scripts/: process_census_data.py
apps/money-radar/tests/: conftest.py  test_api.py  test_llm_extraction.py
apps/money-radar/web/: Dockerfile  package-lock.json  package.json
apps/money-radar/web/src/: App.tsx  index.css
apps/money-radar/web/src/components/: Layout.tsx
apps/money-radar/web/src/pages/: Themes.tsx
census-2021/: README.md  index.html
scripts/: export_db.sh
tests/: conftest.py  test_llm_extraction.py
web/: index.html  nginx.conf  package-lock.json  package.json  (+1 more)
(+43 files in other folders)
