[project]
name = "ukmppr"
version = "0.1.0"
description = "UK Money Pain Point Radar"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "httpx>=0.27",
  "typer>=0.12",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "tenacity>=9.0",
]

[project.scripts]
ukmppr = "ukmppr.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "api"}

[tool.setuptools.packages.find]
where = ["api"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
